--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-clipboard/clipboard": "^1.14.1",
     "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-community/slider": "^4.5.2",
+    "@react-native-firebase/app": "^21.7.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
@@ -44,6 +45,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-multiple-select": "^0.5.12",
     "react-native-orientation-locker": "^1.7.0",
     "react-native-permissions": "^4.1.5",
     "react-native-phone-number-input": "^2.1.0",
@@ -51,7 +53,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
+    "react-native-screens": "^4.4.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^15.3.0",
