--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@react-native-clipboard/clipboard": "^1.14.1",
     "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-community/slider": "^4.5.2",
-    "@react-native-firebase/app": "^21.7.1",
+    "@react-native-firebase/app": "^21.14.0",
+    "@react-native-firebase/messaging": "^22.2.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
@@ -49,6 +50,7 @@
     "react-native-orientation-locker": "^1.7.0",
     "react-native-permissions": "^4.1.5",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-render-html": "^6.3.4",
     "react-native-responsive-fontsize": "^0.5.1",
